@@ -18,10 +18,8 @@ import ru.itmo.mpi.hospital.testsupport.WebIntegrationTest;
 import ru.itmo.mpi.hospital.testsupport.testdata.PatientTestData;
 
 import javax.validation.constraints.NotNull;
-
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -48,9 +46,9 @@ public class PatientAdministratorDiseasedBrowseTest extends WebIntegrationTest {
     void given_patientsExists_when_openDiseasedPatients_then_tableContainsThePatients(Screens screens) {
 
         // given:
-        ScreenInteractions screenInteractions = ScreenInteractions.forBrowse(screens);
-        PatientAdministratorDiseasedBrowse patientBrowse = screenInteractions.open(PatientAdministratorDiseasedBrowse.class);
-        TableInteractions<Patient> patientTable = entityTable(patientBrowse);
+        ScreenInteractions screenInteractions = ScreenInteractions.forBrowse(screens);//cppst
+        PatientAdministratorDiseasedBrowse patientBrowse = screenInteractions.open(PatientAdministratorDiseasedBrowse.class);//нужный экран
+        TableInteractions<Patient> patientTable = entityTable(patientBrowse);//таблица с экрана
 
         // expect:
         assertThat(patientTable.allItems().size())
@@ -66,7 +64,7 @@ public class PatientAdministratorDiseasedBrowseTest extends WebIntegrationTest {
         PatientAdministratorDiseasedBrowse patientBrowse = screenInteractions.open(PatientAdministratorDiseasedBrowse.class);
         TableInteractions<Patient> patientTable = entityTable(patientBrowse);
 
-        Patient firstDead = patients.patients.stream().filter(pat -> pat.getPatientState().equals(PatientState.DISEASED)).findFirst().get();
+        Patient firstDead = patients.patients.stream().filter(pat -> pat.getPatientState().equals(PatientState.DISEASED)).findFirst().orElseThrow();
         patientTable.selectItem(firstDead.getId());
         patientTable.clickButton("buryBtn");
 
@@ -84,9 +82,8 @@ public class PatientAdministratorDiseasedBrowseTest extends WebIntegrationTest {
         ScreenInteractions screenInteractions = ScreenInteractions.forBrowse(screens);
         PatientAdministratorDiseasedBrowse patientBrowse = screenInteractions.open(PatientAdministratorDiseasedBrowse.class);
         TableInteractions<Patient> patientTable = entityTable(patientBrowse);
-        Button buryBtn = patientTable.button("buryBtn");
 
-        Patient firstAliveNotAristocrat = patients.patients.stream().filter(pat -> (pat.getPatientState().equals(PatientState.HEALTHY) && !pat.getSocialStatus().equals(SocialStatus.ARISTOCRAT))).findFirst().get();
+        Patient firstAliveNotAristocrat = patients.patients.stream().filter(pat -> (pat.getPatientState().equals(PatientState.HEALTHY) && !pat.getSocialStatus().equals(SocialStatus.ARISTOCRAT))).findFirst().orElseThrow();
         patientTable.selectItem(firstAliveNotAristocrat.getId());
         patientTable.clickButton("buryBtn");
 
@@ -108,12 +105,13 @@ public class PatientAdministratorDiseasedBrowseTest extends WebIntegrationTest {
 
         Patient firstNotBuryable = patients.patients.stream().filter(pat ->
                 (pat.getPatientState().equals(PatientState.SICK) || pat.getPatientState().equals(PatientState.BURIED) || (pat.getPatientState().equals(PatientState.HEALTHY) && !pat.getSocialStatus().equals(SocialStatus.ARISTOCRAT))
-                )).findFirst().get();
+                )).findFirst().orElseThrow();
 
 
         patientTable.selectItem(firstNotBuryable.getId());
 
         // expect:
+        assert buryBtn != null;
         assertThat(buryBtn.isEnabled())
                 .isEqualTo(false);
     }
@@ -127,16 +125,17 @@ public class PatientAdministratorDiseasedBrowseTest extends WebIntegrationTest {
         TableInteractions<Patient> patientTable = entityTable(patientBrowse);
         Button buryAllBtn = patientTable.button("buryAllBtn");
 
-        List<Patient> allDead = patients.patients.stream().filter(pat -> pat.getPatientState().equals(PatientState.DISEASED)).collect(Collectors.toList());
-        List<UUID> deadUuid = allDead.stream().map(Patient::getId).collect(Collectors.toList());
+        List<Patient> allDead = patients.patients.stream().filter(pat -> pat.getPatientState().equals(PatientState.DISEASED)).toList();
+        List<UUID> deadUuid = allDead.stream().map(Patient::getId).toList();
 
         // then:
+        assert buryAllBtn != null;
         buryAllBtn.click();
 
-        List<Patient> allBuried = dataManager.load(Patient.class).all().list().stream().filter(pat -> deadUuid.contains(pat.getId())).collect(Collectors.toList());
+        List<Patient> allBuried = dataManager.load(Patient.class).all().list().stream().filter(pat -> deadUuid.contains(pat.getId())).toList();
 
         // expect:
-        List<UUID> allBuriedUuids = allBuried.stream().map(Patient::getId).collect(Collectors.toList());
+        List<UUID> allBuriedUuids = allBuried.stream().map(Patient::getId).toList();
 
         Assertions.assertTrue(allBuriedUuids.size() == deadUuid.size() && allBuriedUuids.containsAll(deadUuid) && deadUuid.containsAll(allBuriedUuids));
     }
